# cesar

./: .gitignore  .gitmodules
cesar_ide/: CMakeLists.txt
cesar_ide/resources/: main.qml
cesar_ide/source/: CMakeLists.txt
cesar_ide/source_ide/: CMakeLists.txt  CodeTextEdit.cpp  CodeTextEdit.h  main.cpp
cesar_ide/tests/: CMakeLists.txt
